--- a/Boost_Client/makefile
+++ b/Boost_Client/makefile
@@ -1,16 +1,19 @@
 CFLAGS:=-c -Wall -Weffc++ -g -std=c++11 -Iinclude
 LDFLAGS:=-lboost_system
 
-all: EchoClient
-	g++ -o bin/echoExample bin/connectionHandler.o bin/echoClient.o $(LDFLAGS) 
+all: BGRSclient
+	g++ -o bin/BGRSclient bin/BGRSconnectionHandler.o bin/BGRSclient.o bin/LockingQueue.o $(LDFLAGS) 
 
-EchoClient: bin/connectionHandler.o bin/echoClient.o
+BGRSclient: bin/BGRSconnectionHandler.o bin/BGRSclient.o
 	
-bin/connectionHandler.o: src/connectionHandler.cpp
-	g++ $(CFLAGS) -o bin/connectionHandler.o src/connectionHandler.cpp
+bin/BGRSconnectionHandler.o: src/BGRSconnectionHandler.cpp
+	g++ $(CFLAGS) -o bin/BGRSconnectionHandler.o src/BGRSconnectionHandler.cpp
 
-bin/echoClient.o: src/echoClient.cpp
-	g++ $(CFLAGS) -o bin/echoClient.o src/echoClient.cpp
+bin/BGRSclient.o: src/BGRSclient.cpp
+	g++ $(CFLAGS) -o bin/BGRSclient.o src/BGRSclient.cpp
+	
+bin/LockingQueue.o: src/LockingQueue.cpp
+	g++ $(CFLAGS) -o bin/LockingQueue.o src/LockingQueue.cpp
 	
 .PHONY: clean
 clean:
