Updated makefile, BGRSclient.cpp

--- a/Boost_Client/makefile
+++ b/Boost_Client/makefile
@@ -1,20 +1,16 @@
-CFLAGS:=-c -Wall -Weffc++ -g -std=c++11 -Iinclude
-LDFLAGS:=-lboost_system
-
 all: BGRSclient
-	g++ -o bin/BGRSclient bin/BGRSconnectionHandler.o bin/BGRSclient.o bin/LockingQueue.o $(LDFLAGS) 
 
-BGRSclient: bin/BGRSconnectionHandler.o bin/BGRSclient.o bin/LockingQueue.o
-	
-bin/BGRSconnectionHandler.o: src/BGRSconnectionHandler.cpp
-	g++ $(CFLAGS) -o bin/BGRSconnectionHandler.o src/BGRSconnectionHandler.cpp
+BGRSclient: bin/BGRSclient.o bin/BGRSconnectionHandler.o bin/LockingQueue.o
+	g++ -o bin/BGRSclient bin/BGRSclient.o bin/BGRSconnectionHandler.o bin/LockingQueue.o -lboost_system -pthread
 
 bin/BGRSclient.o: src/BGRSclient.cpp
-	g++ $(CFLAGS) -o bin/BGRSclient.o src/BGRSclient.cpp
+	g++ -g -Wall -Weffc++ -std=c++11 -c -Iinclude -o bin/BGRSclient.o src/BGRSclient.cpp
+
+bin/BGRSconnectionHandler.o: src/BGRSconnectionHandler.cpp
+	g++ -g -Wall -Weffc++ -std=c++11 -c -Iinclude -o bin/BGRSconnectionHandler.o src/BGRSconnectionHandler.cpp
 	
 bin/LockingQueue.o: src/LockingQueue.cpp
-	g++ $(CFLAGS) -o bin/LockingQueue.o src/LockingQueue.cpp
-	
-.PHONY: clean
-clean:
+	g++ -g -Wall -Weffc++ -std=c++11 -c -Iinclude -o bin/LockingQueue.o src/LockingQueue.cpp
+
+clean: 
 	rm -f bin/*
